[package]
name = "cnet"
version = "0.1.0"
edition = "2021"

description = "Interactive terminal selector for numbers 1 through 10"
license = "MIT"

[dependencies]
crossterm = "0.27"
get_if_addrs = "0.5"
ipnetwork = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
